--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Meta -->
     <meta charset="UTF-8" />
 
-    <title>Suivi Temps</title>
+    <title>AngularJS Client Time Reminder</title>
 
     <!-- https://docs.angularjs.org/error/$location/nobase -->
     <base href="/">
