--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="col-sm-12">
             <h1 class="text-center">Suivi Temps</h1>
 
-            <p class="text-center">Build by <a href="https://hugo.maugey.fr">Hugo Maugey</a> for <a href="http://www.waw-coworking.com">WAW</a></p>
+            <p class="text-center">Build by <a href="https://hugo.maugey.fr" title="Webmaster Narbonne">Hugo Maugey</a> for <a href="http://www.waw-coworking.com" title="Coworking Narbonne">WAW</a></p>
 
             <table class="table" style="margin-top:30px;">
                 <thead>
